--- a/packages/vuetify/src/components/VApp/VApp.sass
+++ b/packages/vuetify/src/components/VApp/VApp.sass
@@ -11,6 +11,7 @@
     backface-visibility: hidden
     display: flex
     flex-direction: column
+    min-height: 100vh
     max-width: 100%
     position: relative
 
