fix(VOverlay): prevent body scrolling on iOS
fixes #3875

--- a/packages/vuetify/src/components/VOverlay/VOverlay.sass
+++ b/packages/vuetify/src/components/VOverlay/VOverlay.sass
@@ -1,4 +1,5 @@
 @forward './variables'
+@use 'sass:selector'
 @use './variables' as *
 
 // Block
@@ -13,6 +14,12 @@
 .v-overlay-scroll-blocked
   padding-inline-end: var(--v-scrollbar-offset)
   overflow-y: hidden !important
+
+  @supports (-webkit-touch-callout: none)
+    @at-root #{selector.append(html, &)}
+      position: fixed
+      top: var(--v-ios-body-scroll-y)
+      left: var(--v-ios-body-scroll-x)
 
 .v-overlay
   border-radius: inherit
