feat(VSnackbar): re-implement using VOverlay (#14920)
resolves #14909

--- a/packages/vuetify/src/components/VSnackbar/VSnackbar.sass
+++ b/packages/vuetify/src/components/VSnackbar/VSnackbar.sass
@@ -4,14 +4,8 @@
 @use './variables' as *
 
 .v-snackbar
-  bottom: $snackbar-bottom
-  display: flex
   justify-content: center
-  left: $snackbar-left
-  pointer-events: none
-  right: $snackbar-right
-  top: $snackbar-top
-  width: 100%
+  padding-inline-end: var(--v-scrollbar-offset)
 
   &:not(.v-snackbar--absolute)
     height: 100vh
@@ -31,10 +25,6 @@
     padding: $snackbar-wrapper-padding
     pointer-events: auto
     position: relative
-    transition-duration: .15s
-    transition-property: opacity, transform
-    transition-timing-function: settings.$decelerated-easing
-    z-index: 1
 
     @include tools.rounded($snackbar-border-radius)
 
@@ -95,11 +85,20 @@
       margin-bottom: $snackbar-vertical-action-margin-bottom
 
 .v-snackbar-transition
-  &-enter-from
-    &.v-snackbar__wrapper
-      transform: scale($snackbar-transition-scale)
+  &-enter-active,
+  &-leave-active
+    transition-duration: .15s
+    transition-timing-function: settings.$decelerated-easing
 
-  &-enter-from,
+  &-enter-active
+    transition-property: opacity, transform
+
+  &-enter-from
+    opacity: 0
+    transform: scale($snackbar-transition-scale)
+
+  &-leave-active
+    transition-property: opacity
+
   &-leave-to
-    &.v-snackbar__wrapper
-      opacity: 0
+    opacity: 0
