--- a/packages/vuetify/src/components/VList/VList.sass
+++ b/packages/vuetify/src/components/VList/VList.sass
@@ -18,6 +18,10 @@
     pointer-events: none
     user-select: none
 
+  &--nav
+    padding-inline-start: $list-nav-padding
+    padding-inline-end: $list-nav-padding
+
   &--rounded
     @include tools.rounded($list-rounded-border-radius)
 
