feat(VMenu): support nested submenus (#15018)
Closes #1877
Fixes #8674
Fixes #14978

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -34,7 +34,7 @@
     @include button-density('height', $button-density)
 
   @include tools.border($button-border...)
-  @include tools.states('.v-btn__overlay', false)
+  @include tools.states('.v-btn__overlay')
   @include tools.variant($button-variants...)
 
   @supports selector(:focus-visible)
