fix(VTextField): show placeholder when label is undefined
related: c50bc0bea4ca73e52992db548959e9e997e03f72
fixes #15075

--- a/packages/vuetify/src/components/VTextField/VTextField.sass
+++ b/packages/vuetify/src/components/VTextField/VTextField.sass
@@ -8,7 +8,6 @@
   input
     color: inherit
     flex: $text-field-input-flex
-    opacity: 0
     transition: $text-field-input-transition
 
     &:focus,
@@ -32,6 +31,10 @@
   .v-input__details
     padding-inline-start: $text-field-details-padding-inline
     padding-inline-end: $text-field-details-padding-inline
+
+  .v-field--has-label
+    input
+      opacity: 0
 
   .v-field--active
     input
@@ -73,8 +76,4 @@
   &--flush-details
     .v-input__details
       padding: 0
-
-  &--persistent-placeholder
-    input
-      opacity: 1
 /* endregion */
