fix(VTextField): shrink to fit available width
fixes #15086

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -10,7 +10,7 @@
 .v-field
   display: grid
   grid-template-areas: "prepend-inner field clear append-inner"
-  grid-template-columns: min-content auto min-content min-content
+  grid-template-columns: min-content minmax(0, 1fr) min-content min-content
   font-size: $field-font-size
   letter-spacing: $field-letter-spacing
   max-width: $field-max-width
