--- a/packages/vuetify/src/components/VInput/VInput.sass
+++ b/packages/vuetify/src/components/VInput/VInput.sass
@@ -27,7 +27,7 @@
 
 .v-input--horizontal
   grid-template-areas: "prepend control append" "a messages b"
-  grid-template-columns: max-content auto max-content
+  grid-template-columns: max-content minmax(0, 1fr) max-content
   grid-template-rows: auto auto
 
   .v-input__prepend
