--- a/packages/vuetify/src/components/VTextField/VTextField.sass
+++ b/packages/vuetify/src/components/VTextField/VTextField.sass
@@ -9,6 +9,7 @@
     color: inherit
     flex: $text-field-input-flex
     transition: $text-field-input-transition
+    min-width: 0
 
     &:focus,
     &:active
