fix(VListItem): apply nav prop styling when not inside v-list

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -110,7 +110,7 @@
 
   @include tools.typography($list-item-subtitle-typography...)
 
-  .v-list--nav &
+  .v-list-item--nav &
     @include tools.typography($list-item-nav-subtitle-typography...)
 
 .v-list-item-title
@@ -125,7 +125,7 @@
 
   @include tools.typography($list-item-title-typography...)
 
-  .v-list--nav &
+  .v-list-item--nav &
     @include tools.typography($list-item-nav-title-typography...)
 
 .v-list-item
