--- a/packages/vuetify/src/components/VAlert/VAlert.sass
+++ b/packages/vuetify/src/components/VAlert/VAlert.sass
@@ -1,12 +1,13 @@
 @forward './variables'
+
 @use '../../styles/tools'
 @use './variables' as *
 
 .v-alert
   display: grid
   flex: 1 1
-  grid-template-areas: "prepend content append close"
-  grid-template-columns: max-content auto max-content min-content
+  grid-template-areas: "prepend title append close" ". text append ."
+  grid-template-columns: max-content auto max-content max-content
   position: relative
   padding: $alert-padding
   overflow: hidden
@@ -15,6 +16,9 @@
   @include tools.position($alert-positions)
   @include tools.rounded($alert-border-radius)
   @include tools.variant($alert-variants...)
+
+  &--prominent
+    grid-template-areas: "prepend title append close" "prepend text append ."
 
   &.v-alert--border
     --v-border-opacity: #{$alert-border-opacity}
@@ -65,28 +69,45 @@
     border-bottom-width: $alert-border-thin-width
 
 .v-alert__close
-  align-self: flex-start
   cursor: pointer
   display: flex
   flex: 0 1 auto
   grid-area: close
   user-select: none
 
+.v-alert-text
+  align-self: center
+  grid-area: auto / 2 / auto / 2
+  overflow: hidden
+
+.v-alert__append,
+.v-alert__close
+  align-self: flex-start
+  margin-inline-start: $alert-append-margin-inline-start
+
 .v-alert__append
+  align-self: flex-start
   grid-area: append
 
+  + .v-alert__close
+    margin-inline-start: $alert-append-close-margin-inline-start
+
+.v-alert-icon,
 .v-alert__prepend
+  align-self: flex-start
   grid-area: prepend
   margin-inline-end: $alert-prepend-margin-inline-end
 
   .v-alert--prominent &
     align-self: center
 
-.v-alert__content
-  grid-area: content
-  line-height: 1.7
+  + .v-alert-title
+    margin-top: $alert-title-prepend-margin-top
 
 .v-alert__underlay
+  grid-area: none
+  position: absolute
+
   .v-alert--border-start &
     border-top-left-radius: 0
     border-bottom-left-radius: 0
@@ -105,9 +126,11 @@
 
 .v-alert-title
   align-items: center
+  align-self: center
   display: flex
   font-size: $alert-title-font-size
   font-weight: $alert-title-font-weight
+  grid-area: title
   hyphens: $alert-title-hyphens
   letter-spacing: $alert-title-letter-spacing
   line-height: $alert-title-line-height
